[package]
name = "sync-point"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.86"

tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

axum = "0.7.5"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
